--- a/.pre-commit.config.yaml
+++ b/.pre-commit.config.yaml
@@ -10,6 +10,6 @@ repos:
           [
             "-rn", # Only display message
             "-sn", # Don't display the score
-            "--rcfile=,pylintrc", # Link to your config file
+            "--rcfile=.pylintrc", # Link to your config file
             "--load-plugins=pylint.extensions.docparams", # Load extensions
           ]
